--- a/test/fixtures/beverages.yml
+++ b/test/fixtures/beverages.yml
@@ -3,11 +3,11 @@
 one:
   name: MyString
   category: MyString
-  packaging: MyString
+  quantity: MyString
   price: 1
 
 two:
   name: MyString
   category: MyString
-  packaging: MyString
+  quantity: MyString
   price: 1
